# lego-price-prediction

./: README.md  pyproject.toml
.dvc/: .gitignore  config
data/: raw.dvc
notebooks/: 0.01-jh-exploration-brickset.ipynb  01_exploration.ipynb
